# vpn-manager

./: Cargo.toml  README.md  check.sh  output.txt
.github/workflows/: ci.yml
crates/vpn-core/: Cargo.toml
crates/vpn-core/src/: config.rs  geo.rs  http_tester.rs  lib.rs  types.rs  utils.rs
crates/vpn-knife/: Cargo.toml
crates/vpn-knife/src/: lib.rs
crates/vpn-l10n/: Cargo.toml
crates/vpn-l10n/src/: lib.rs
crates/vpn-proxy/: Cargo.toml
crates/vpn-proxy/src/: lib.rs
crates/vpn-subs/: Cargo.toml
crates/vpn-subs/src/: crud.rs  lib.rs  update.rs
crates/vpn-testing/: Cargo.toml
crates/vpn-testing/src/: lib.rs
locales/: ru.json
src/: commands.rs  config.rs  db.rs  geo.rs  http_tester.rs  knife.rs  l10n.rs  localization.rs  main.rs  parallel_rules.rs  proxy.rs  settings.rs  start_help.rs  subs.rs  update.rs  utils.rs
src/settings/: display.rs  handlers.rs  http_urls.rs  mod.rs  validation.rs
src/subs/: cfscanner.rs  handlers.rs  mod.rs
src/update/: classifier.rs  coordinator.rs  mod.rs  stats.rs  utils.rs
