[workspace]
members = [
    "crates/vpn-core",
    "crates/vpn-subs",
    "crates/vpn-knife",
    "crates/vpn-testing",
    "crates/vpn-proxy",
    "crates/vpn-l10n",
]

[package]
name = "vpn-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
tempfile = "3.3"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "socks"] }
libc = "0.2"
base64 = "0.21"
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
sha2 = "0.10"
rand = "0.8"
once_cell = "1"
vpn-core = { path = "crates/vpn-core" }
vpn-subs = { path = "crates/vpn-subs" }
vpn-knife = { path = "crates/vpn-knife" }
vpn-testing = { path = "crates/vpn-testing" }
vpn-proxy = { path = "crates/vpn-proxy" }
vpn-l10n = { path = "crates/vpn-l10n" }